@@ -1,0 +1,20 @@
+OBJS = \
+	$(MTOBJODIR)$(DIRSEP)ny2008$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)second$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)igmsup$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)ibbsny$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)fights$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)chatadd$(OFILE)
+
+AEDIT_OBJS = \
+	$(MTOBJODIR)$(DIRSEP)aedit$(OFILE)
+
+MEDIT_OBJS = \
+	$(MTOBJODIR)$(DIRSEP)medit$(OFILE)
+
+NYIBBS_OBJS = \
+	$(MTOBJODIR)$(DIRSEP)nyibbs$(OFILE) \
+	$(MTOBJODIR)$(DIRSEP)ibbsny$(OFILE)
+
+NYEDIT_OBJS = \
+	$(MTOBJODIR)$(DIRSEP)nyedit$(OFILE)
