@@ -1,0 +1,7 @@
+NY2008	=	$(EXEODIR)$(DIRSEP)ny2008$(EXEFILE)
+AEDIT	=	$(EXEODIR)$(DIRSEP)aedit$(EXEFILE)
+MEDIT	=	$(EXEODIR)$(DIRSEP)medit$(EXEFILE)
+NYIBBS	=	$(EXEODIR)$(DIRSEP)myibbs$(EXEFILE)
+NYEDIT	=	$(EXEODIR)$(DIRSEP)nyedit$(EXEFILE)
+
+all: xpdev-mt ciolib-mt uifc-mt $(MTOBJODIR) $(EXEODIR) $(NY2008) $(AEDIT) $(MEDIT) $(NYIBBS) $(NYEDIT)
