@@ -124,7 +124,7 @@
 IncludeVerInfo=1
 AutoIncBuild=1
 MajorVer=3
-MinorVer=17
+MinorVer=18
 Release=0
 Build=0
 Debug=0
